--- a/.github/workflows/test-render-vault.yml
+++ b/.github/workflows/test-render-vault.yml
@@ -12,7 +12,7 @@ jobs:
 
     services:
       vault:
-        image: vault:latest
+        image: hashicorp/vault:latest
         env:
           VAULT_DEV_ROOT_TOKEN_ID: root
           VAULT_DEV_LISTEN_ADDRESS: 0.0.0.0:8200
